# CBT-Rony

./: .gitignore  GEMINI.md  README.md  boost.json  composer.json  package-lock.json  package.json
app/Events/: StudentExamUpdate.php
app/Exports/: ExamResultsExport.php  SiswaTemplateExport.php  TemplateExport.php
app/Imports/: QuestionsImport.php  SiswaImport.php
app/Livewire/: AdminPanel.php  GradeExam.php  ItemAnalysis.php  ManageClassrooms.php  ManageQuestions.php  ProctorDashboard.php  QuestionBankIndex.php  QuestionBankShow.php  TakeExam.php  TeacherDashboard.php
app/Models/: BankOption.php  BankQuestion.php  Classroom.php  Exam.php  ExamAttempt.php  Major.php  Option.php  Question.php  QuestionBank.php  Result.php  Setting.php  Subject.php  User.php
app/Providers/: AppServiceProvider.php
app/Services/: ExamGrader.php
app/Support/: helpers.php
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_extensions_helpers.sql  0002_master_akademik.sql  0003_users_enrollment.sql  0004_lab_model.sql  0005_bank_soal.sql  0006_ujian_komposisi.sql  0007_attempt_answers.sql  0008_index_trigger.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
backend/src/handlers/: auth.rs  dosen.rs  health.rs  mahasiswa.rs  mod.rs
backend/src/services/: grading.rs  mod.rs
bootstrap/: app.php
database/factories/: UserFactory.php
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
routes/: auth.php  web.php
(+59 files in other folders)
